# geotiv

./: .envrc  CHANGELOG.md  CMakeLists.txt  Makefile  NAME  PRECISION.md  PROJECT  README.md  TODO_NEXT_SESSION.md  devbox.json  geoascii_demo.tif  test_bigtiff_forced.tif  test_bigtiff_multi.tif  test_bigtiff_roundtrip.tif  test_classic_tiff.tif  test_forced_single_strip.tif  test_multi_layer_multi_strip.tif  test_multi_strip_auto.tif  test_multi_strip_explicit.tif  test_multi_strip_float.tif  test_multi_strip_int16.tif  test_single_strip.tif  xmake.lua
examples/: generate_random_image.cpp  generate_test_pattern.cpp  geoascii_demo.cpp  grid_coordinate_test.cpp  layer_demo.cpp  main.cpp
include/geotiv/: errors.hpp  parser.hpp  raster.hpp  types.hpp  writter.hpp
include/rastkit/: errors.hpp  parser.hpp  raster.hpp  rastkit.hpp  types.hpp  writter.hpp
src/: parser.cpp  raster.cpp  types.cpp  writter.cpp
src/geotiv/: geotiv.cpp
src/rastkit/: rastkit.cpp
test/: test_bigtiff.cpp  test_geoascii.cpp  test_geodouble.cpp  test_layer.cpp  test_metadata_tags.cpp  test_multi_ifd.cpp  test_multi_strip.cpp  test_parser.cpp  test_precision.cpp  test_raster.cpp  test_types.cpp  test_vertical_crs.cpp  test_writer.cpp
